--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-12-25  Maximilian Schleiss <maximilian@xfce.org>
+
+	* es.po: Spanish translation update (Abel Martín)
+	* gl.po: Galician translation update (Leandro Regueiro)
+
 2008-12-22  Michal Várady <miko.vaji@gmail.com>
 
 	* cs.po: Czech translation updated
