--- a/po/es.po
+++ b/po/es.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: thunar-svn-plugin 0.0.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-06-16 00:45+0200\n"
-"PO-Revision-Date: 2008-10-21 20:31+0100\n"
+"PO-Revision-Date: 2008-12-16 21:49+0100\n"
 "Last-Translator: Abel Martín <abel.martin.ruiz@gmail.com>\n"
 "Language-Team: Spanish <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
@@ -685,7 +685,7 @@ msgstr "Sustituido"
 
 #: tsp-svn-helper/tsh-common.c:477
 msgid "Transmitting"
-msgstr "Trasmitiendo"
+msgstr "Transmitiendo"
 
 #: tsp-svn-helper/tsh-common.c:479
 msgid "Locked"
