--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-05  Mike Massonnet <mmassonnet@xfce.org>
+
+	* pt.po: Renamed pt_PT.po to pt.po (bug #4574)
+
 2009-01-13  Alexander Toresson <eulex@xfce.org>
 
 	* sv.po, LINGUAS: Swedish translation added (Daniel Nylander)
