--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,12 @@
+0.0.3
+=====
+- All svn api functions changed to the 1.5 svn api. libsvn version 1.5 or
+  newer is now required.
+
 0.0.2
 =====
 - New Subversion actions have been added: switch, relocate, blame.
-- File selection dialog added for varios Subversion actions.
+- File selection dialog added for various Subversion actions.
 
 0.0.1
 =====
