--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,14 +1,26 @@
+2009-03-30  Piotr Sokół <piotr.sokol@10g.pl>
+
+	* pl.po: Polish translation update
+
 2009-03-27  Maximilian Schleiss <maximilian@xfce.org>
 
 	* gl.po: Galician translation update (Leandro Regueiro)
 
-2009-03-15 Per Kongstad <pko@xfce.org>
+2009-03-16  Piotr Sokół <piotr.sokol@10g.pl>
+
+	* pl.po: Polish translation update
+
+2009-03-15  Per Kongstad <pko@xfce.org>
 
 	* da.po: Danish translation update
 
 2009-03-14  Maximilian Schleiss <maximilian@xfce.org>
 
 	* gl.po: Galician translation update (Leandro Regueiro)
+
+2009-03-08  Piotr Sokół <piotr.sokol@10g.pl>
+
+	* pl.po: Polish translation update
 
 2009-03-05  Mike Massonnet <mmassonnet@xfce.org>
 
