--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2009-04-13  Mike Massonnet <mmassonnet@xfce.org>
+
+	* id.po: Indonesian translation upadte (Andhika Padmawan)
+	* ca.po: Add Catalan translation (Harald Servat)
+
 2009-04-08  Piotr Sokół <piotr.sokol@10g.pl>
 
 	* pl.po: Polish translation update
