--- a/po/gl.po
+++ b/po/gl.po
@@ -12,8 +12,8 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-15 15:49+0100\n"
-"PO-Revision-Date: 2009-03-16 14:13+0100\n"
-"Last-Translator: Leandro Regueiro <leandro DOT regueiro AT gmail DOT com>\n"
+"PO-Revision-Date: 2009-04-14 22:02+0100\n"
+"Last-Translator: Leandro Regueiro <leandro.regueiro@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1183,7 +1183,6 @@ msgid "_Repository:"
 msgstr "_Repositorio:"
 
 #: tsp-svn-helper/tsh-transfer-dialog.c:156
-#, fuzzy
 msgid "Transfer"
 msgstr "Transferir"
 
