* da.po: Danish translation update
(Old svn revision: 7303)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-05-02  Per Kongstad <pko@xfce.org>
+
+	* da.po: Danish translation update
+
 2009-04-16  Mike Massonnet <mmassonnet@xfce.org>
 
 	* gl.po: Galician translation update (Leandro Regueiro)
