--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,9 @@
 2009-05-02  Per Kongstad <pko@xfce.org>
 
+	* da.po: Danish translation update correction
+
+2009-05-02  Per Kongstad <pko@xfce.org>
+
 	* da.po: Danish translation update
 
 2009-04-16  Mike Massonnet <mmassonnet@xfce.org>
