Renaming the thunar-svn-plugin to thunar-vcs-plugin. Project files.
(Old svn revision: 7634)

--- a/README
+++ b/README
@@ -1,8 +1,8 @@
-About Thunar SVN Plugin
+About Thunar VCS Plugin
 =======================
 
-The Thunar SVN Plugin adds Subversion actions to the context menu of thunar.
-This gives a SVN intergration to Thunar.
+The Thunar VCS Plugin adds Subversion actions to the context menu of thunar.
+This gives a VCS intergration to Thunar.
 
 The current features are:
 - Most of the svn action: add, checkout, cleanup, commit, copy, delete,
@@ -37,8 +37,8 @@ Installation
 
 The file 'INSTALL' contains generic installation instructions. Make sure to
 run ./configure --prefix=$(pkg-config --variable prefix thunarx-1) so Thunar
-can find the plugin. For more information, visit the thunar-svn-plugin website
-at http://goodies.xfce.org/projects/thunar-plugins/thunar-svn-plugin
+can find the plugin. For more information, visit the thunar-vcs-plugin website
+at http://goodies.xfce.org/projects/thunar-plugins/thunar-vcs-plugin
 
 
 How to report bugs?
@@ -46,6 +46,6 @@ How to report bugs?
 
 Bugs should be reported to the Xfce bug tracking system
 (http://bugzilla.xfce.org, product Thunar Plugins, component
-thunar-svn-plugin).  You will need to create an account for yourself.
+thunar-vcs-plugin).  You will need to create an account for yourself.
 
 # vi:set ts=2 sw=2 et ai nocindent textwidth=78:
