--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-06-28  Mike Massonnet <mmassonnet@xfce.org>
+
+	* zh_CN.po: Simplified Chinese translation update (Hunt Xu)
+
 2009-06-06  Michal Várady <miko.vaji@gmail.com>
 
 	* cs.po: Czech translation updated
