--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,87 @@
+2009-09-27	Peter de Ridder <peter@xfce.org>
+
+	* autogen.sh configure.ac.in: Changed scripts to xfce4-dev-tools
+	  version 4.7.2. Thunar VCS Plugin depends on 4.7.2 of
+	  xfce4-dev-tools, now.
+	* tvp-svn-helper/tsh-file-selection-dialog.c: Fixed revert for
+	  directory deletion.
+
+2009-08-27	Peter de Ridder <peter@xfce.org>
+
+	* tvp-svn-helper/tsh-commit.c
+	  tvp-svn-helper/tsh-file-selection-dialog.[ch]: Better file Selector.
+	  Using recursion info in file selection and commit command to be able
+	  to commit directory deletion.
+	* tvp-svn-helper/tsh-delete.c: Removed TSH_FILE_SELECTION_FLAG_MODIFIED
+	  flag.
+	* tvp-svn-helper/tsh-revert.c: Added
+	  TSH_FILE_SELECTION_FLAG_REVERSE_DISABLE_CHILDREN flag.
+
+2009-07-27	Peter de Ridder <peter@xfce.org>
+
+	* tvp-svn-helper/tsh-delete.c(delete_thread): Fixed segfault.
+	* tvp-svn-helper/tsh-file-selection-dialog.[ch]: Support for
+	  unversioned directory trees.
+	* tvp-svn-helper/tsh-revert.c(revert_thread): Execute revert in
+	  reverse directory order.
+	* tvp-svn-helper/tsh-add.c: Support for non-recursive add.
+	* tvp-svn-helper/tsh-log-dialog.c: Fixed 2 missing characters in last
+	  commit.
+	* tvp-svn-helper/tsh-commit.c: Support adding unversioned files before
+	  commiting. This fixes bug #3921.
+	
+2009-07-26	Peter de Ridder <peter@xfce.org>
+
+	* thunar-vcs-plugin/tvp-svn-action.c: The add context menu item is now
+	  visible on folder background menu too.
+	* tvp-svn-helper/tsh-{file-selection,log-message,log,status}-dialog.c:
+	  The file lists are tree views now.
+	* tvp-svn-helper/tsh-tree-common.[ch]: Common routines to build a tree
+	  view of files.
+	* tvp-svn-helper/tsh-common.c(tsh_log_func)
+	  tvp-svn-helper/tsh-log-dialog.[ch]: Support has_children for log
+	  entries.
+	* tvp-svn-helper/Makefile.am: tsh-tree-common.[ch] added.
+	
+2009-07-25	Peter de Ridder <peter@xfce.org>
+
+	* thunar-vcs-plugin/tvp-svn-backend.c(tvp_svn_backend_init,
+	  tvp_svn_backend_free): Changed the libsvn init. Not using
+	  svn_cmdline_init anymore. This fixes bug #5106.
+	* thunar-vcs-plugin/tvp-svn-action.c(tvp_svn_action_create_menu_item):
+	  Made the changelist menu item popup unimplemented.
+	* tvp-git-helper/tgh-{add,common}.c: Fixed system includes.
+	* configure.ac.in: Added check for 'sys/wait.h'.
+	* tvp-svn-helper/gtk*.[ch]: Removed the gtkfilechooser files from the
+	  project.
+	* tvp-svn-helper/ths-log.c(log_thread): Fixed libsvn 1.5 support.
+	* tvp-svn-helper/tsh-common.c: Fixed compiler compatibility.
+	* tvp-svn-helper/tsh-resolved.c(resolved_thread): Added initializer
+	  for posible uninintialized variable.
+	
+2009-07-10	Peter de Ridder <peter@xfce.org>
+
+	* configure.ac.in: Added flags to disable subversion or git support.
+
+2009-06-28	Peter de Ridder <peter@xfce.org>
+
+	* Renaming the thunar-svn-plugin to thunar-vcs-plugin.
+	* Added basic git support to the thunar-vcs-plugin.
+
+2009-06-28	Peter de Ridder <peter@xfce.org>
+
+	* thunar-svn-plugin.c: Added add_subaction{,_u} to save alot of code
+	  for adding items to the action menu.
+
+2009-04-30	Peter de Ridder <peter@xfce.org>
+
+	* configure.ac.in: version incremented after release.
+	* thunar-svn-plugin tsp-svn-helper: changed functions to svn 1.6 api.
+
+2009-03-15	Peter de Ridder <peter@xfce.org>
+
+	* Added comments about 1.5 recursion information for translators.
+
 2009-03-14	Peter de Ridder	<peter@xfce.org>
 
 	* === Released 0.0.3 ===
@@ -10,14 +94,14 @@
 2009-02-27	Peter de Ridder	<peter@xfce.org>
 
 	* thunar-svn-helper/tsh-{transfer,relocate}-dialog.c
-	thunar-svn-helper/Makefile: Removed gtkfilechooserentry which got
-	broken with the later version of gtk.
+	  thunar-svn-helper/Makefile: Removed gtkfilechooserentry which got
+	  broken with the later version of gtk.
 	* INSTALL: Updated to newer version provided by the auto tools.
 
 2008-07-17	Peter de Ridder	<peter@xfce.org>
 
 	* tsp-svn-helper/main.c: Fixed bug by moving gtk_threads_enter
-	directly behind gdk_threads_init.
+	  directly behind gdk_threads_init.
 
 2008-06-16	Peter de Ridder	<peter@xfce.org>
 
