--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,40 @@
+2009-10-23	Peter de Ridder <peter@xfce.org>
+
+	* === Released 0.1.1 ===
+	* tvp-git-helper/tgh-clone.c: Added -- to the argument list.
+	* po/*: Updated po files.
+	* tvp-git-helper/tgh-add.c tvp-git-helper/tgh-common.[ch]
+	  tvp-git-helper/tgh-notify-dialog.[ch]: Added notify dialog to make add
+	  more verbose.
+	* tvp-git-helper/tgh-common.c
+	  tvp-git-helper/tgh-file-selection-dialog.c: Improved status output
+	  parsing.
+	* tvp-git-helper/tgh-reset{,-dialog}.[ch]: Replaced the reset dialog by
+	  message boxes.
+
+2009-10-14	Peter de Ridder <peter@xfce.org>
+
+	* tvp-git-helper/tgh-{add,reset}.c: Made chdir work correct.
+	* tvp-git-helper/tgh-file-selection-dialog.[ch]: Don't use input files
+	  for git call since this gives the wrong results.
+	* po/POTFILES.in: added git helper files.
+	* po/thunar-vcs-plugin.pot po/*.po: updated po files.
+	* thunar-vcs-lpugin/tvp-git-action.c tvp-git-helper/Makefile.am
+	  tvp-git-helper/main.c tvp-git-helper/tgh-common.[ch]
+	  tvp-git-helper/tgh-log{-dialog,}.[ch]: Added log action.
+
+2009-10-11	Peter de Ridder <peter@xfce.org>
+
+	* thunar-vcs-plugin/tvp-provider.c
+	  thunar-vcs-plugin/tvp-git-action.[ch]: Added extra flags to
+	  tvp_git_action_new.
+	* thunar-vcs-plugin/yvp-{svn,git}-action.c: Only show menu items if they
+	  are implemented.
+	* tvp-git-helper/main.c tvp-git-helper/tgh-clone.[ch]
+	  tvp-git-helper/tgh-transfer-dialog.[ch]: Added clone action.
+	* tvp-git-helper/tgh-{add,branch,reset,status}.[ch]: Cleaned the code a
+	  bit.
+
 2009-09-29	Peter de Ridder <peter@xfce.org>
 
 	* tvp-{svn,git}-helper/main.c: Added xfce_textdomain to correctly init
